--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -15,27 +15,61 @@
                 <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-            <Button Name="ResetDB" Content="Reset Database" Margin="10,10,10,10" Grid.Column="0" Height="35" FontSize="16" Click="ResetDB_Click" />
-            <Button Name="RebuildDB" Content="Rebuild Database" Margin="10,10,10,10" Grid.Column="1" Height="35" FontSize="16" Click="RebuildDB_Click" />
-            <Button Name="Save" Content="Save" Margin="10,10,10,10" Grid.Column="2" FontSize="16" Height="35" Click="Save_Click" />
+            <Button
+                Name="ResetDB"
+                Content="Reset Database"
+                Margin="10,10,10,10"
+                Grid.Column="0"
+                Height="40"
+                FontSize="16"
+                Click="ResetDB_Click"
+                HorizontalAlignment="Center"
+                Width="175"
+                />
+            <Button
+                Name="RebuildDB"
+                Content="Rebuild Database"
+                Margin="10,10,10,10"
+                Grid.Column="1"
+                Height="40"
+                FontSize="16"
+                Click="RebuildDB_Click"
+                HorizontalAlignment="Center"
+                Width="175"
+                />
+            <Button
+                Name="Save"
+                Content="Save"
+                Margin="10,10,10,10"
+                Grid.Column="2"
+                FontSize="16"
+                Height="40"
+                Click="Save_Click"
+                HorizontalAlignment="Center"
+                Width="175"
+                />
         </Grid>
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="5*"/>
-                <ColumnDefinition Width="210"/>
+                <ColumnDefinition Width="4*"/>
+                <ColumnDefinition Width="300"/>
             </Grid.ColumnDefinitions>
             <StackPanel Grid.Column="0">
                 <DockPanel>
-                    <Label Content="Company Name" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Right" Width="170" />
+                    <TextBlock Text="Company Name" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                     <TextBox Name="CompanyNameBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                 </DockPanel>
                 <DockPanel>
-                    <Label Content="Contact Email" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Right" Width="170" />
+                    <TextBlock Text="Contact Email" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                     <TextBox Name="ContactEmailBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
                 </DockPanel>
                 <DockPanel Grid.Column="0">
-                    <Label Content="Default Timing System" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Right" Width="170" />
+                    <TextBlock Text="Default Timing System" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
                     <ComboBox Name="DefaultTimingBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" />
+                </DockPanel>
+                <DockPanel Grid.Column="0">
+                    <TextBlock Text="Theme Color" FontSize="14" Margin="10,10,10,10" Width="170" VerticalAlignment="Center" />
+                    <ComboBox Name="ThemeColorBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" SelectionChanged="ThemeColorBox_SelectionChanged" />
                 </DockPanel>
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -43,9 +77,9 @@
                         <ColumnDefinition Width="1*"/>
                         <ColumnDefinition Width="100"/>
                     </Grid.ColumnDefinitions>
-                    <Label Content="Export Directory" FontSize="14" Margin="10,10,10,10" HorizontalContentAlignment="Right" Grid.Column="0"/>
+                    <TextBlock Text="Export Directory" FontSize="14" Margin="10,10,10,10" Grid.Column="0" VerticalAlignment="Center"/>
                     <TextBox Name="DefaultExportDirBox" FontSize="14" Margin="0,10,10,10" VerticalContentAlignment="Center" IsEnabled="False" Grid.Column="1"/>
-                    <Button Name="ChangeExport" FontSize="14" Height="29" Margin="0,10,10,10" Grid.Column="2" Content="Change" Click="ChangeExport_Click"/>
+                    <Button Name="ChangeExport" FontSize="14" Height="35" Margin="0,10,10,10" HorizontalAlignment="Stretch" Grid.Column="2" Content="Change" Click="ChangeExport_Click"/>
                 </Grid>
             </StackPanel>
             <StackPanel Grid.Column="1">
