Redesign for chip and age group pages. Fixed some issues where the TextBlock color wouldn't be set properly on start because pages were not designated as UiPages.

--- a/ChronoKeep/UI/MainPages/DashboardPage.xaml
+++ b/ChronoKeep/UI/MainPages/DashboardPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Chronokeep.UI.MainPages.DashboardPage"
+﻿<ui:UiPage x:Class="Chronokeep.UI.MainPages.DashboardPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:s="clr-namespace:System;assembly=mscorlib"
@@ -179,4 +179,4 @@
                 />
         </StackPanel>
     </Grid>
-</Page>
+</ui:UiPage>
