--- a/ChronoKeep/UI/MainPages/AgeGroupsPage.xaml
+++ b/ChronoKeep/UI/MainPages/AgeGroupsPage.xaml
@@ -40,7 +40,7 @@
                     <ComboBoxItem Content="5 Years" Uid="2"/>
                     <ComboBoxItem Content="Under 40, Masters, Grand Masters" Uid="3"/>
                 </ComboBox>
-                <Button FontSize="16" Height="35" Content="Change" Name="AddDefault" Click="AddDefault_Click" Margin="10,0,10,0"/>
+                <Button FontSize="16" Height="35" Content="Change" Name="AddDefault" Click="AddDefault_Click" Margin="10,0,10,0" HorizontalAlignment="Stretch"/>
             </StackPanel>
         </Grid>
     </Grid>
