--- a/ChronoKeep/UI/MainPages/ChipAssigmentPage.xaml
+++ b/ChronoKeep/UI/MainPages/ChipAssigmentPage.xaml
@@ -1,36 +1,100 @@
-﻿<Page x:Class="Chronokeep.UI.MainPages.ChipAssigmentPage"
+﻿<ui:UiPage x:Class="Chronokeep.UI.MainPages.ChipAssigmentPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Chronokeep.UI.MainPages"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ChipAssigmentPage" Loaded="Page_Loaded">
-
     <Grid>
-        <Label Name="nothing" Content="Event not set. Please choose an event before selecting this option." Visibility="Collapsed" />
+        <TextBlock 
+            Name="nothing"
+            Text="Event not set. Please choose an event before selecting this option."
+            Visibility="Collapsed" />
         <Grid Name="everything">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="250"/>
             </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="55"/>
-            </Grid.RowDefinitions>
-            <ListView Name="bibChipList" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" SelectionMode="Extended" SizeChanged="BibChipList_SizeChanged" Grid.Column="1">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="Bib" Width="85" DisplayMemberBinding="{Binding Bib}"/>
-                        <GridViewColumn Header="Chip" Width="85" DisplayMemberBinding="{Binding Chip}"/>
-                    </GridView>
-                </ListView.View>
-            </ListView>
+            <Grid Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="20"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="55"/>
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Grid.Column="0" Margin="12,0,0,0" Text="Bib"/>
+                    <TextBlock Grid.Column="1" Margin="0,0,0,0" Text="Chip"/>
+                </Grid>
+                <ListView
+                    Name="bibChipList" 
+                    VerticalAlignment="Stretch"
+                    HorizontalAlignment="Stretch"
+                    SelectionMode="Extended"
+                    Grid.Row="1"
+                    >
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="1*"/>
+                                    <ColumnDefinition Width="1*"/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Grid.Column="0" Margin="8,4" Text="{Binding Bib}"/>
+                                <TextBlock Grid.Column="1" Margin="8,4" Text="{Binding Chip}"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <Grid Grid.Row="2">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="140"/>
+                        <ColumnDefinition Width="110"/>
+                    </Grid.ColumnDefinitions>
+                    <Button
+                        Name="Delete"
+                        Content="Delete Selected"
+                        Margin="10,5,5,5"
+                        FontSize="14"
+                        Height="35" 
+                        Click="Delete_Click"
+                        Grid.Column="0"
+                        Grid.Row="0"
+                        />
+                    <Button 
+                        Name="Clear"
+                        Content="Delete All"
+                        Margin="5,5,10,5"
+                        FontSize="14"
+                        Height="35"
+                        Click="Clear_Click"
+                        Grid.Column="1"
+                        Grid.Row="0"
+                        />
+                </Grid>
+            </Grid>
             <StackPanel Grid.Column="0">
                 <DockPanel HorizontalAlignment="Center">
-                    <Label Content="Chip Type" Margin="10" VerticalAlignment="Center" VerticalContentAlignment="Center" FontSize="16"/>
-                    <ComboBox Name="ChipTypeBox" Width="100" Margin="10" VerticalContentAlignment="Center" FontSize="16">
+                    <Label 
+                        Content="Chip Type"
+                        Margin="10"
+                        VerticalAlignment="Center" 
+                        VerticalContentAlignment="Center"
+                        FontSize="16"
+                        />
+                    <ComboBox
+                        Name="ChipTypeBox" 
+                        Width="100" 
+                        Margin="10" 
+                        VerticalContentAlignment="Center" 
+                        FontSize="16"
+                        >
                         <ComboBoxItem Content="Dec" IsSelected="True" />
                         <ComboBoxItem Content="Hex" />
                     </ComboBox>
@@ -41,32 +105,129 @@
                         <ColumnDefinition Width="3*"/>
                     </Grid.ColumnDefinitions>
                     <StackPanel Grid.Column="0">
-                        <Label Content="Assign Single" FontSize="20" Margin="10,5,10,0" HorizontalContentAlignment="Center"/>
+                        <TextBlock
+                            Text="Assign Single"
+                            FontSize="20"
+                            Margin="10,5,10,0"
+                            HorizontalAlignment="Center"
+                            />
                         <DockPanel>
-                            <Label Content="Bib" Margin="10,0,10,0" FontSize="16" HorizontalContentAlignment="Right" Width="50"/>
-                            <TextBox Name="SingleBibBox" FontSize="16" Margin="5,5,5,5" KeyDown="KeyPressHandlerSingle" PreviewTextInput="BibValidation" GotFocus="SelectAll"/>
+                            <TextBlock
+                                Text="Bib"
+                                Margin="10,0,10,0"
+                                FontSize="16"
+                                Width="50"
+                                VerticalAlignment="Center"
+                                />
+                            <TextBox
+                                Name="SingleBibBox"
+                                FontSize="16"
+                                Margin="5,5,5,5"
+                                KeyDown="KeyPressHandlerSingle"
+                                PreviewTextInput="BibValidation"
+                                GotFocus="SelectAll"
+                                />
                         </DockPanel>
                         <DockPanel>
-                            <Label Content="Chip" Margin="10,0,10,0" FontSize="16" HorizontalContentAlignment="Right" Width="50"/>
-                            <TextBox Name="SingleChipBox" FontSize="16" Margin="5,5,5,5" KeyDown="KeyPressHandlerSingle" PreviewTextInput="ChipValidation" GotFocus="SelectAll"/>
+                            <TextBlock
+                                Text="Chip"
+                                Margin="10,0,10,0"
+                                FontSize="16"
+                                Width="50"
+                                VerticalAlignment="Center"
+                                />
+                            <TextBox
+                                Name="SingleChipBox"
+                                FontSize="16"
+                                Margin="5,5,5,5"
+                                KeyDown="KeyPressHandlerSingle"
+                                PreviewTextInput="ChipValidation"
+                                GotFocus="SelectAll"
+                                />
                         </DockPanel>
-                        <Button Name="SaveSingleButton" Content="Save Single" MaxWidth="150" Click="SaveSingleButton_Click" Margin="10,10,10,10" Height="35" FontSize="16"/>
+                        <Button
+                            Name="SaveSingleButton"
+                            Content="Save Single"
+                            MaxWidth="150"
+                            Click="SaveSingleButton_Click"
+                            Margin="10,10,10,10"
+                            Height="35"
+                            FontSize="16"
+                            HorizontalAlignment="Center"
+                            Width="150"
+                            />
                         <Separator/>
-                        <Button Name="FileImport" Content="Import" Margin="10,10,10,0" Height="35" FontSize="16" Click="FileImport_Click"/>
-                        <Button Name="Export" Content="Export" Margin="10,10,10,0" Height="35" FontSize="16" Click="Export_Click" />
-                        <Button Name="UseTool" Content="Use Tool" Margin="10,10,10,0" Height="35" FontSize="16" Click="UseTool_Click"/>
+                        <Button
+                            Name="FileImport" 
+                            Content="Import" 
+                            Margin="10,10,10,0" 
+                            Height="35" 
+                            FontSize="16" 
+                            Click="FileImport_Click"
+                            HorizontalAlignment="Center"
+                            Width="150"
+                            />
+                        <Button
+                            Name="Export"
+                            Content="Export" 
+                            Margin="10,10,10,0"
+                            Height="35" 
+                            FontSize="16" 
+                            Click="Export_Click" 
+                            HorizontalAlignment="Center"
+                            Width="150"
+                            />
+                        <Button 
+                            Name="UseTool"
+                            Content="Use Tool" 
+                            Margin="10,10,10,0"
+                            Height="35" 
+                            FontSize="16" 
+                            Click="UseTool_Click"
+                            HorizontalAlignment="Center"
+                            Width="150"
+                            />
                     </StackPanel>
                     <StackPanel Grid.Column="1">
-                        <Label Content="Assign Range" FontSize="20" Margin="10,5,10,0" HorizontalContentAlignment="Center"/>
+                        <TextBlock
+                            Text="Assign Range" 
+                            FontSize="20"
+                            Margin="10,5,10,0"
+                            HorizontalAlignment="Center"
+                            />
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="65"/>
                                 <ColumnDefinition Width="1*"/>
                                 <ColumnDefinition Width="1*"/>
                             </Grid.ColumnDefinitions>
-                            <Label Content="Bib" Margin="0,0,0,0" FontSize="16" HorizontalContentAlignment="Right" Grid.Column="0"/>
-                            <TextBox Name="RangeStartBibBox" FontSize="16" Margin="5,5,5,5" Grid.Column="1" KeyDown="KeyPressHandlerRange" TextChanged="UpdateEndChip" PreviewTextInput="BibValidation" GotFocus="SelectAll"/>
-                            <TextBox Name="RangeEndBibBox" FontSize="16" Margin="5,5,5,5" Grid.Column="2" KeyDown="KeyPressHandlerRange" TextChanged="UpdateEndChip" PreviewTextInput="BibValidation" GotFocus="SelectAll"/>
+                            <TextBlock
+                                Text="Bib" 
+                                Margin="10,0,0,0"
+                                FontSize="16"
+                                Grid.Column="0"
+                                VerticalAlignment="Center"
+                                />
+                            <TextBox
+                                Name="RangeStartBibBox"
+                                FontSize="16" 
+                                Margin="5,5,5,5" 
+                                Grid.Column="1"
+                                KeyDown="KeyPressHandlerRange"
+                                TextChanged="UpdateEndChip"
+                                PreviewTextInput="BibValidation"
+                                GotFocus="SelectAll"
+                                />
+                            <TextBox
+                                Name="RangeEndBibBox"
+                                FontSize="16"
+                                Margin="5,5,5,5"
+                                Grid.Column="2"
+                                KeyDown="KeyPressHandlerRange" 
+                                TextChanged="UpdateEndChip"
+                                PreviewTextInput="BibValidation"
+                                GotFocus="SelectAll"
+                                />
                         </Grid>
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -74,26 +235,66 @@
                                 <ColumnDefinition Width="1*"/>
                                 <ColumnDefinition Width="1*"/>
                             </Grid.ColumnDefinitions>
-                            <Label Content="Chip" Margin="0,0,0,0" FontSize="16" HorizontalContentAlignment="Right" Grid.Column="0"/>
-                            <TextBox Name="RangeStartChipBox" FontSize="16" Margin="5,5,5,5" Grid.Column="1" KeyDown="KeyPressHandlerRange" TextChanged="UpdateEndChip" PreviewTextInput="ChipValidation" GotFocus="SelectAll"/>
-                            <Label Name="RangeEndChipLabel" FontSize="16" Margin="5,0,5,0" Grid.Column="2"/>
+                            <TextBlock 
+                                Text="Chip"
+                                Margin="10,0,0,0"
+                                FontSize="16"
+                                Grid.Column="0"
+                                VerticalAlignment="Center"
+                                />
+                            <TextBox
+                                Name="RangeStartChipBox" 
+                                FontSize="16"
+                                Margin="5,5,5,5" 
+                                Grid.Column="1"
+                                KeyDown="KeyPressHandlerRange" 
+                                TextChanged="UpdateEndChip" 
+                                PreviewTextInput="ChipValidation"
+                                GotFocus="SelectAll"
+                                />
+                            <TextBlock
+                                Name="RangeEndChipLabel"
+                                FontSize="16"
+                                Margin="10,0,5,0"
+                                Grid.Column="2"
+                                VerticalAlignment="Center"
+                                />
                         </Grid>
-                        <Button Name="SaveRangeButton" Content="Save Range" Width="150" Click="SaveRangeButton_Click" Margin="0,10,0,10" Height="35" FontSize="16"/>
+                        <Button
+                            Name="SaveRangeButton"
+                            Content="Save Range"
+                            Width="150"
+                            Click="SaveRangeButton_Click"
+                            HorizontalAlignment="Center"
+                            Margin="0,10,0,10"
+                            Height="35"
+                            FontSize="16"
+                            />
                         <Separator/>
-                        <Label Content="Copy from:" Margin="10,2,10,0" FontSize="20" HorizontalContentAlignment="Center"/>
-                        <ComboBox Name="previousEvents" FontSize="16" Margin="10,5,10,10"/>
-                        <Button Name="copy" Content="Copy" Margin="10,0,10,10" Height="35" FontSize="16" Click="Copy_Click"/>
+                        <TextBlock 
+                            Text="Copy from:" 
+                            Margin="10,2,10,0" 
+                            FontSize="20"
+                            HorizontalAlignment="Center"
+                            />
+                        <ComboBox
+                            Name="previousEvents"
+                            FontSize="16"
+                            Margin="10,5,10,10"
+                            />
+                        <Button
+                            Name="copy"
+                            Content="Copy"
+                            Margin="10,0,10,10"
+                            Height="35"
+                            FontSize="16"
+                            Click="Copy_Click"
+                            HorizontalAlignment="Center"
+                            Width="150"
+                            />
                     </StackPanel>
                 </Grid>
             </StackPanel>
-            <Grid Grid.Column="1" Grid.Row="1">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="140"/>
-                    <ColumnDefinition Width="110"/>
-                </Grid.ColumnDefinitions>
-                <Button Name="Delete" Content="Delete Selected" Margin="10,5,5,5" FontSize="16" Height="35" Click="Delete_Click" Grid.Column="0" Grid.Row="0"/>
-                <Button Name="Clear" Content="Delete All" Margin="5,5,10,5" FontSize="16" Height="35" Click="Clear_Click" Grid.Column="1" Grid.Row="0"/>
-            </Grid>
         </Grid>
     </Grid>
-</Page>
+</ui:UiPage>
