--- a/ChronoKeep/UI/MainPages/SettingsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SettingsPage.xaml
@@ -1,9 +1,11 @@
-﻿<Page x:Class="Chronokeep.UI.MainPages.SettingsPage"
+﻿<ui:UiPage
+      x:Class="Chronokeep.UI.MainPages.SettingsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Chronokeep.UI.MainPages"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="SettingsPage">
@@ -89,4 +91,4 @@
             </StackPanel>
         </Grid>
     </StackPanel>
-</Page>
+</ui:UiPage>
