--- a/ChronoKeep/UI/MainPages/SegmentsPage.xaml
+++ b/ChronoKeep/UI/MainPages/SegmentsPage.xaml
@@ -1,15 +1,15 @@
-﻿<Page x:Class="Chronokeep.UI.MainPages.SegmentsPage"
+﻿<ui:UiPage x:Class="Chronokeep.UI.MainPages.SegmentsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Chronokeep.UI.MainPages"
+      xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
       mc:Ignorable="d"
       d:DesignHeight="450" d:DesignWidth="800"
       Title="SegmentsPage" Loaded="Page_Loaded">
-
     <Grid>
-        <Label Name="nothing" Content="Event not set. Please choose an event before selecting this option." Visibility="Collapsed" />
+        <TextBlock Name="nothing" Text="Event not set. Please choose an event before selecting this option." Visibility="Collapsed" />
         <Grid Name="everything">
             <Grid.RowDefinitions>
                 <RowDefinition Height="1*"/>
@@ -29,4 +29,4 @@
             </DockPanel>
         </Grid>
     </Grid>
-</Page>
+</ui:UiPage>
